# The-savior-of-nerves-C-project

./: CMakeLists.txt  Вторая версия  Найти номер клавиши  Первая версия кода
src/: clipboard_utils.cpp  clipboard_utils.h  convert_utils.cpp  convert_utils.h  keyboard_hook.cpp  keyboard_hook.h  layout_utils.cpp  layout_utils.h  main.cpp
